# cardano-tx-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cabal.project  cardano-tx-tools.cabal  flake.nix  gate.sh  justfile  mkdocs.yml
.github/workflows/: ci.yml  darwin-dev-homebrew.yml  darwin-release.yml  deploy-docs.yml  publish-images.yaml  release-plan.yml  release.yml
.specify/memory/: constitution.md
app/cardano-tx-generator/: Main.hs
app/tx-diff/: Main.hs  README.md
app/tx-fetch/: Main.hs
app/tx-graph/: Main.hs
app/tx-inspect/: Main.hs
app/tx-sign/: Main.hs
app/tx-validate/: Main.hs
app/tx-view/: Main.hs
docs/: architecture.md  cardano-tx-generator.md  index.md  may-2026-amaru-lattice.md  migration.md  prior-art.md  rewriting-rules.md  tx-diff.md  tx-fetch.md  tx-graph.md  tx-inspect.md  tx-lattice.md  tx-sign.md  tx-validate.md  tx-view.md
docs/assets/asciinema/: tx-graph.cast  tx-inspect.cast  tx-validate.cast
docs/assets/css/: query-grid.css
docs/assets/js/: read-aloud.js
docs/may-2026-amaru-lattice/: README.md  blockfrost-provider.md  index.md  live-utxos.ttl  network-txs.txt  overlay.ttl  rules.yaml  run-the-report.md  seed-txs.txt  setup.sh
docs/may-2026-amaru-lattice/ada-signers-and-references/: 03-network-compliance-ada-accounting.md  04-required-signer-distribution.md  04-required-signer-distribution.rq  06-network-compliance-ada-producers.md  09-reference-input-reuse.md  index.md
docs/may-2026-amaru-lattice/final-network-compliance-state/: 11-terminal-usdm-summary.md  11-terminal-usdm-summary.rq  14-network-compliance-terminal-state.md  14-network-compliance-terminal-state.rq  15-network-compliance-live-diff.md  15-network-compliance-live-diff.rq  16-network-compliance-live-summary.md  16-network-compliance-live-summary.rq  20-terminal-usdm-provenance.md  20-terminal-usdm-provenance.rq  index.md
docs/may-2026-amaru-lattice/lattice-boundary-and-shape/: 00-lattice-inventory.md  00-lattice-inventory.rq  01-network-compliance-touch-summary.md  12-lattice-input-coverage.md  12-lattice-input-coverage.rq  13-lattice-output-assets.md  index.md
docs/may-2026-amaru-lattice/queries/: 00-ada-conservation.md  00-ada-conservation.rq  00-lattice-inventory.md  01-monthly-totals.md  01-monthly-totals.rq  01-network-compliance-touch-summary.md  01-network-compliance-touch-summary.rq  02-usdm-output-addresses.md  02-usdm-output-addresses.rq  03-ada-role-flow.md  03-ada-role-flow.rq  03-network-compliance-ada-accounting.md  03-network-compliance-ada-accounting.rq  04-required-signer-distribution.md  04-required-signer-distribution.rq  05-vendor-attestations.md  05-vendor-payment-overlay.md  05-vendor-payment-overlay.rq  06-disbursement-candidates.md  06-disbursement-candidates.rq  06-network-compliance-ada-producers.md  06-network-compliance-ada-producers.rq  07-network-compliance-usdm-output-classes.md  07-usdm-role-flow.md  07-usdm-role-flow.rq  08-sundae-order-consumer-summary.md  08-sundae-v3-order-consumers.md  08-sundae-v3-order-consumers.rq  08-swap-v2-consumers.md  08-swap-v2-consumers.rq  09-reference-input-reuse.md  09-reference-input-reuse.rq  10-scoop-output-candidates.md  10-scoop-output-candidates.rq  10-sundae-v3-scoop-output-candidates.md  10-sundae-v3-scoop-output-candidates.rq  10-swap-consumer-output-roles.md  11-network-compliance-usdm-residual.md  11-network-compliance-usdm-residual.rq  11-terminal-usdm-summary.md  (+25 more)
nix/: apps.nix  checks.nix  docker-image.nix  linux-artifact-smoke.nix  linux-release.nix  tx-validate-docker-image.nix
rules/: amaru-treasury.yaml
scripts/: tx-fetch  tx-lattice
scripts/release/: get-cabal-version  plan
scripts/smoke/: tx-diff  tx-inspect  tx-sign
skills/cardano-tx-tools-guide/: SKILL.md
specs/001-tx-generator-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-txbuild-integrity-hash/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-validate-phase1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-tx-validate-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-tx-sign/: plan.md  spec.md  tasks.md
specs/028-withcli-migration/: plan.md  spec.md  tasks.md
specs/032-tx-inspect/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/033-rewrite-redesign-harness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/040-collapse-nested-raw-omit/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/043-collapse-required-rename-leak/: spec.md
specs/044-rewrite-rules-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/045-graph-emit-pivot/: spec.md
specs/047-emitter-mvp-deferred/: spec.md
specs/048-rules-loader/: plan.md  research.md  spec.md  tasks.md
specs/050-blueprint-decode/: analysis.md  plan.md  spec.md  tasks.md
specs/051-sparql-views/: analysis.md  plan.md  spec.md  tasks.md
specs/058-body-emitter/: analysis.md  plan.md  research.md  spec.md  tasks.md
specs/061-seed-rewards-state/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/070-body-emit-conway-semantic/: analysis.md  plan.md  spec.md  tasks.md
specs/080-amaru-disburse-fixtures/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/088-tx-inspect-cardanoscan-links/: plan.md  spec.md  tasks.md
specs/090-amaru-disburse-fixtures-dsl/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/095-walker-ext-openarray-openobject/: analysis.md  plan.md  spec.md  tasks.md
specs/119-aarch64-artifacts/: plan.md  spec.md  tasks.md
specs/127-tx-build-reconcile/: plan.md  spec.md  tasks.md
src-tx-build/Cardano/Tx/: Balance.hs  (+6 more)
src/Cardano/: Tx.hs
test/: StaticResolver.hs  e2e-main.hs  tx-generator-main.hs  tx-validate-main.hs  unit-main.hs
test/fixtures/: pparams.json
views/: asset-flow.rq  cli-tree.rq  entity-occurrences.rq  json-ld.rq  no-stub-triples.rq
(+333 files in other folders)
