cabal-version:   3.4
name:            cardano-tx-tools
version:         0.1.3.0
synopsis:        Cardano transaction tooling (builder, structural diff)
description:
  Library and executables for working with Cardano (Conway) transactions:
  building, balancing, structural diffing, and Plutus blueprint decoding.
  The main library has no node-client dependency; an opt-in
  'n2c-resolver' sub-library bridges the resolver chain to
  cardano-node-clients's 'Provider' for the tx-diff executable.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
homepage:        https://lambdasistemi.github.io/cardano-tx-tools/
bug-reports:     https://github.com/lambdasistemi/cardano-tx-tools/issues
category:        Cardano
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wmissing-export-lists
    -Wname-shadowing -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import:           warnings
  hs-source-dirs:   src
  default-language: GHC2021
  exposed-modules:
    Cardano.Tx.Balance
    Cardano.Tx.Blueprint
    Cardano.Tx.Build
    Cardano.Tx.Diff
    Cardano.Tx.Diff.Cli
    Cardano.Tx.Diff.Resolver
    Cardano.Tx.Diff.Resolver.Web2
    Cardano.Tx.Evaluate
    Cardano.Tx.Ledger
    Cardano.Tx.Validate

  other-modules:
    Cardano.Tx.Credentials
    Cardano.Tx.Deposits
    Cardano.Tx.Inputs
    Cardano.Tx.Scripts
    Cardano.Tx.Witnesses

  build-depends:
    , aeson
    , base                       <5
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cardano-data
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , containers
    , data-default
    , exceptions
    , http-client
    , http-client-tls
    , http-types
    , microlens
    , operational
    , plutus-core
    , plutus-tx
    , scientific
    , serialise
    , text
    , time
    , transformers
    , tree-view
    , yaml

library n2c-resolver
  import:           warnings
  visibility:       public
  hs-source-dirs:   lib-n2c-resolver
  default-language: GHC2021
  exposed-modules:  Cardano.Tx.Diff.Resolver.N2C
  build-depends:
    , base                  <5
    , cardano-node-clients
    , cardano-tx-tools

library tx-generator-lib
  import:           warnings
  visibility:       public
  hs-source-dirs:   lib-tx-generator
  default-language: GHC2021
  exposed-modules:
    Cardano.Tx.Generator.Build
    Cardano.Tx.Generator.Daemon
    Cardano.Tx.Generator.Fanout
    Cardano.Tx.Generator.Persist
    Cardano.Tx.Generator.Population
    Cardano.Tx.Generator.Selection
    Cardano.Tx.Generator.Server
    Cardano.Tx.Generator.Snapshot
    Cardano.Tx.Generator.Types

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:utxo-indexer-lib
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , chain-follower
    , containers
    , contra-tracer
    , directory
    , exceptions
    , filepath
    , microlens
    , network
    , operational
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-consensus:protocol
    , ouroboros-network
    , ouroboros-network:api
    , ouroboros-network:framework
    , random
    , retry
    , stm
    , text
    , time
    , unix

executable cardano-tx-generator
  import:           warnings
  hs-source-dirs:   app/cardano-tx-generator
  main-is:          Main.hs
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , cardano-node-clients
    , cardano-tx-tools:tx-generator-lib

executable tx-diff
  import:           warnings
  hs-source-dirs:   app/tx-diff
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core
    , cardano-node-clients
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , containers
    , http-client
    , http-client-tls
    , microlens
    , ouroboros-network:api
    , text

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          unit-main.hs
  default-language: GHC2021
  other-modules:
    Cardano.Tx.BlueprintSpec
    Cardano.Tx.BuildSpec
    Cardano.Tx.Diff.CliSpec
    Cardano.Tx.Diff.ConwaySpec
    Cardano.Tx.Diff.CoreSpec
    Cardano.Tx.Diff.ResolverSpec
    Cardano.Tx.Diff.Web2Spec
    Cardano.Tx.DiffSpec
    Cardano.Tx.Validate.LoadUtxo
    Cardano.Tx.Validate.LoadUtxoSpec
    Cardano.Tx.ValidateSpec

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-node-clients
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , containers
    , filepath
    , hspec
    , microlens
    , plutus-core
    , QuickCheck
    , text

test-suite e2e-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          e2e-main.hs
  default-language: GHC2021
  other-modules:
    Cardano.Node.Client.E2E.BalanceSpec
    Cardano.Node.Client.E2E.ChainPopulatorSpec
    Cardano.Node.Client.E2E.GovernanceSmokeSpec
    Cardano.Node.Client.E2E.MultiAssetChangeSpec
    Cardano.Node.Client.E2E.TxBuildSpec
    Cardano.Node.Client.E2E.UTxOIndexerSpec

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-read
    , cardano-node-clients
    , cardano-node-clients:devnet
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , containers
    , directory
    , filepath
    , hspec
    , microlens
    , network
    , temporary
    , text

test-suite tx-generator-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          tx-generator-main.hs
  default-language: GHC2021
  other-modules:
    Cardano.Tx.Generator.FanoutSpec
    Cardano.Tx.Generator.PersistSpec
    Cardano.Tx.Generator.PopulationSpec
    Cardano.Tx.Generator.SelectionSpec
    Cardano.Tx.Generator.ServerSpec
    Cardano.Tx.Generator.SnapshotSpec

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , cardano-tx-tools:tx-generator-lib
    , containers
    , directory
    , filepath
    , hspec
    , microlens
    , network
    , plutus-core
    , QuickCheck
    , random
    , sop-extras
    , temporary
    , text
    , time
