cabal-version:   3.4
name:            cardano-tx-tools
version:         0.1.5.0
synopsis:        Cardano transaction tooling (builder, structural diff)
description:
  Library and executables for working with Cardano (Conway) transactions:
  building, balancing, structural diffing, and Plutus blueprint decoding.
  The main library has no node-client dependency; an opt-in
  'n2c-resolver' sub-library bridges the resolver chain to
  cardano-node-clients's 'Provider' for the tx-diff executable.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
homepage:        https://lambdasistemi.github.io/cardano-tx-tools/
bug-reports:     https://github.com/lambdasistemi/cardano-tx-tools/issues
category:        Cardano
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common warnings
  ghc-options:
    -Wall -Werror -Wunused-imports -Wmissing-export-lists
    -Wname-shadowing -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import:           warnings
  hs-source-dirs:   src
  default-language: GHC2021
  exposed-modules:
    Cardano.Tx.Balance
    Cardano.Tx.Blueprint
    Cardano.Tx.Build
    Cardano.Tx.Diff
    Cardano.Tx.Diff.Cli
    Cardano.Tx.Diff.Resolver
    Cardano.Tx.Diff.Resolver.Web2
    Cardano.Tx.Evaluate
    Cardano.Tx.Ledger
    Cardano.Tx.Rewrite
    Cardano.Tx.Sign.AttachWitness
    Cardano.Tx.Sign.Cli
    Cardano.Tx.Sign.Cli.Common
    Cardano.Tx.Sign.Cli.Passphrase
    Cardano.Tx.Sign.Cli.Vault
    Cardano.Tx.Sign.Cli.Witness
    Cardano.Tx.Sign.Envelope
    Cardano.Tx.Sign.Hex
    Cardano.Tx.Sign.Vault
    Cardano.Tx.Sign.Vault.Age
    Cardano.Tx.Sign.Witness
    Cardano.Tx.Validate
    Cardano.Tx.Validate.Cli

  other-modules:
    Cardano.Tx.Credentials
    Cardano.Tx.Deposits
    Cardano.Tx.Inputs
    Cardano.Tx.Scripts
    Cardano.Tx.Witnesses

  build-depends:
    , aeson
    , aeson-pretty
    , age
    , base                           <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-class
    , cardano-data
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , containers
    , crypton
    , data-default
    , directory
    , exceptions
    , filepath
    , github-release-check
    , github-release-check:optparse
    , haskeline
    , http-client
    , http-client-tls
    , http-types
    , memory
    , microlens
    , operational
    , optparse-applicative
    , plutus-core
    , plutus-tx
    , scientific
    , serialise
    , text
    , time
    , transformers
    , tree-view
    , unix
    , yaml

library n2c-resolver
  import:           warnings
  visibility:       public
  hs-source-dirs:   lib-n2c-resolver
  default-language: GHC2021
  exposed-modules:  Cardano.Tx.Diff.Resolver.N2C
  build-depends:
    , base                  <5
    , cardano-node-clients
    , cardano-tx-tools

library tx-generator-lib
  import:           warnings
  visibility:       public
  hs-source-dirs:   lib-tx-generator
  default-language: GHC2021
  exposed-modules:
    Cardano.Tx.Generator.Build
    Cardano.Tx.Generator.Daemon
    Cardano.Tx.Generator.Fanout
    Cardano.Tx.Generator.Persist
    Cardano.Tx.Generator.Population
    Cardano.Tx.Generator.Selection
    Cardano.Tx.Generator.Server
    Cardano.Tx.Generator.Snapshot
    Cardano.Tx.Generator.Types

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-node-clients:utxo-indexer-lib
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , chain-follower
    , containers
    , contra-tracer
    , directory
    , exceptions
    , filepath
    , microlens
    , network
    , operational
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-consensus:protocol
    , ouroboros-network
    , ouroboros-network:api
    , ouroboros-network:framework
    , random
    , retry
    , stm
    , text
    , time
    , unix

executable cardano-tx-generator
  import:           warnings
  hs-source-dirs:   app/cardano-tx-generator
  main-is:          Main.hs
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  autogen-modules:  Paths_cardano_tx_tools
  other-modules:    Paths_cardano_tx_tools
  build-depends:
    , base
    , cardano-node-clients
    , cardano-tx-tools:tx-generator-lib
    , github-release-check

executable tx-diff
  import:           warnings
  hs-source-dirs:   app/tx-diff
  main-is:          Main.hs
  default-language: GHC2021
  autogen-modules:  Paths_cardano_tx_tools
  other-modules:    Paths_cardano_tx_tools
  build-depends:
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core
    , cardano-node-clients
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , containers
    , github-release-check
    , github-release-check:optparse
    , http-client
    , http-client-tls
    , microlens
    , ouroboros-network:api
    , text

executable tx-inspect
  import:           warnings
  hs-source-dirs:   app/tx-inspect
  main-is:          Main.hs
  default-language: GHC2021
  autogen-modules:  Paths_cardano_tx_tools
  other-modules:    Paths_cardano_tx_tools
  build-depends:
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core
    , cardano-node-clients
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , containers
    , github-release-check
    , github-release-check:optparse
    , http-client
    , http-client-tls
    , microlens
    , optparse-applicative
    , ouroboros-network:api
    , text

executable tx-sign
  import:           warnings
  hs-source-dirs:   app/tx-sign
  main-is:          Main.hs
  default-language: GHC2021
  autogen-modules:  Paths_cardano_tx_tools
  other-modules:    Paths_cardano_tx_tools
  build-depends:
    , base
    , cardano-tx-tools
    , github-release-check
    , github-release-check:optparse

executable tx-validate
  import:           warnings
  hs-source-dirs:   app/tx-validate
  main-is:          Main.hs
  default-language: GHC2021
  autogen-modules:  Paths_cardano_tx_tools
  other-modules:    Paths_cardano_tx_tools
  build-depends:
    , aeson
    , aeson-pretty
    , async
    , base
    , bytestring
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-node-clients
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , containers
    , github-release-check
    , ouroboros-network:api
    , text

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test test/fixtures/rewrite-redesign
  main-is:          unit-main.hs
  default-language: GHC2021
  other-modules:
    Cardano.Tx.BlueprintSpec
    Cardano.Tx.BuildSpec
    Cardano.Tx.Diff.CliSpec
    Cardano.Tx.Diff.ConwaySpec
    Cardano.Tx.Diff.CoreSpec
    Cardano.Tx.Diff.ResolverSpec
    Cardano.Tx.Diff.Web2Spec
    Cardano.Tx.DiffSpec
    Cardano.Tx.InspectSpec
    Cardano.Tx.Rewrite.ApplySpec
    Cardano.Tx.Rewrite.LoadSpec
    Cardano.Tx.Rewrite.RewriteRedesignGoldenSpec
    Cardano.Tx.Validate.LoadUtxo
    Cardano.Tx.Validate.LoadUtxoSpec
    Cardano.Tx.ValidateSpec
    Fixtures.RewriteRedesign.Helpers
    Fixtures.RewriteRedesign.S02_AliceBobAda
    Fixtures.RewriteRedesign.S03_MultiAssetTransfer
    Fixtures.RewriteRedesign.S04_MintSpendScriptOverlap
    Fixtures.RewriteRedesign.S05_WithdrawalScriptStake
    Fixtures.RewriteRedesign.S06_StakePoolDelegation
    Fixtures.RewriteRedesign.S07_VoteDelegation
    Fixtures.RewriteRedesign.S08_ContingencyDisburse
    Fixtures.RewriteRedesign.S10_GovernanceTreasuryWithdrawal
    StaticResolver

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cardano-data
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-node-clients
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , containers
    , data-default
    , directory
    , filepath
    , hspec
    , microlens
    , plutus-core
    , plutus-tx
    , QuickCheck
    , text

test-suite e2e-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          e2e-main.hs
  default-language: GHC2021
  other-modules:
    Cardano.Node.Client.E2E.BalanceSpec
    Cardano.Node.Client.E2E.ChainPopulatorSpec
    Cardano.Node.Client.E2E.GovernanceSmokeSpec
    Cardano.Node.Client.E2E.MultiAssetChangeSpec
    Cardano.Node.Client.E2E.TxBuildSpec
    Cardano.Node.Client.E2E.UTxOIndexerSpec

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-read
    , cardano-node-clients
    , cardano-node-clients:devnet
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , containers
    , directory
    , filepath
    , hspec
    , microlens
    , network
    , temporary
    , text

test-suite tx-generator-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          tx-generator-main.hs
  default-language: GHC2021
  other-modules:
    Cardano.Tx.Generator.FanoutSpec
    Cardano.Tx.Generator.PersistSpec
    Cardano.Tx.Generator.PopulationSpec
    Cardano.Tx.Generator.SelectionSpec
    Cardano.Tx.Generator.ServerSpec
    Cardano.Tx.Generator.SnapshotSpec

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , cardano-tx-tools:tx-generator-lib
    , containers
    , directory
    , filepath
    , hspec
    , microlens
    , network
    , plutus-core
    , QuickCheck
    , random
    , sop-extras
    , temporary
    , text
    , time

test-suite tx-validate-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          tx-validate-main.hs
  default-language: GHC2021
  other-modules:
    Cardano.Tx.BuildSpec
    Cardano.Tx.Validate.CliSpec
    Cardano.Tx.Validate.LoadUtxo

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-slotting
    , cardano-strict-containers
    , cardano-tx-tools
    , cardano-tx-tools:n2c-resolver
    , containers
    , filepath
    , github-release-check
    , hspec
    , microlens
    , plutus-core
    , text
